--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="p:domain_verify" content="048166bee542b3be122d71f83144cbdc"/>
+	<meta name="p:domain_verify" content="33d7dcb0d4e2e445d9bfc6dc0ee56f37"/>
     <title>Recipe Inspiration Gallery | RecipeFiesta</title>
     <meta name="description" content="Discover thousands of the latest recipes and culinary inspiration for quick dinners, healthy meals, decadent desserts, and various other dishes to delight your taste buds.">
     <meta name="keywords" content="recipes, cooking, food, dinner, lunch, breakfast, dessert, healthy">   
